fixed some element overlapping

--- a/css/custom.css
+++ b/css/custom.css
@@ -1,4 +1,4 @@
-.jumbotron{
+/* .jumbotron{
   padding-left: 0px;
   text-align: center;
 }
@@ -9,5 +9,5 @@
 
 .start_button{
   text-align: center;
-}
+} */
 
